fix(2.7.x): restore JDK 8 test and sample compatibility